--- a/h5s/page.css
+++ b/h5s/page.css
@@ -241,8 +241,7 @@ pre {
   margin-top: 20px;
   margin-bottom: 20px;
 
-  background: black;
-  color: green;
+  background: rgb(240, 240, 240);
   border: 1px solid rgb(224, 224, 224);
   box-shadow: inset 0 2px 6px rgba(0, 0, 0, .1);
   
