--- a/h5s/page.css
+++ b/h5s/page.css
@@ -251,6 +251,37 @@ pre {
   overflow: auto;
 }
 
+div.code {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px solid rgb(224, 224, 224);
+  box-shadow: inset 0 2px 6px rgba(0, 0, 0, .1);
+  padding: 3px 5px;
+  background: rgb(240, 240, 240);
+}
+
+.code pre {
+  margin:0;
+  padding:0;
+  border:none;
+  box-shadow:none;
+  overflow:hidden;
+}
+
+.code .note {
+  color:gray;
+  font-size:90%;
+  position:relative;
+  right: 0;
+  text-align:right;
+  padding-right:7px;
+  height:0;
+}
+
+
+p~pre {margin-top: 5px}
+li div pre { margin: 0 }
+
 pre ol.linenums {
   padding-top:0;
   margin-top:0;
@@ -439,4 +470,24 @@ article.smaller q::after {
 .prettyprint .dec, 
 .prettyprint .var { /* a declaration; a variable name */
   color: rgb(127, 0, 127);
-}  
+}
+
+
+.labrat {
+  margin:30px 0 0 50px;
+  color:#999;
+  font-family:Times;
+  font-style:italic;
+}
+.labrat:before{
+  display:block;
+  float:left;
+  margin-left:-50px;
+  content:"";
+  left:0;
+  width:40px;
+  height:40px;
+  z-index:2;
+  background:url(../images/labs.svg) no-repeat;
+  background-size:30px 40px;
+}
