Few changes that make slides look more similar between Chrome and Firefox

--- a/h5s/slides.css
+++ b/h5s/slides.css
@@ -96,7 +96,7 @@ article small{
   bottom:0;
   left:0;
   right:0;
-  //background-size:100% 100%;
+  background-size:100%;
   overflow:hidden;
   background-repeat: no-repeat;
   opacity:0.25;
