--- a/h5s/page.css
+++ b/h5s/page.css
@@ -85,7 +85,7 @@ input {
 
 
 b {
-  font-weight: 600;
+  font-weight: bold;
 }
 
 .blue {
@@ -129,7 +129,7 @@ h1 {
   margin: 0;
   padding-right: 40px;
 
-  font-weight: 600;
+  font-weight:bold;
 
   letter-spacing: -3px;
 }
@@ -144,7 +144,7 @@ h2 {
   margin: 0;
   padding-right: 40px;
 
-  font-weight: 600;
+  font-weight:bold;
 
   letter-spacing: -2px;
 }
@@ -162,7 +162,7 @@ h3 {
   margin: 0;
   padding-right: 40px;
 
-  font-weight: 600;
+  font-weight:bold;
 
   letter-spacing: -1px;
 }
@@ -175,7 +175,7 @@ h4 {
   margin: 0;
   margin-top:.8em;
   padding: 0;
-  font-weight: 600;
+  font-weight:bold;
 
   letter-spacing: -1px;
 }
@@ -358,7 +358,7 @@ table {
   margin-top: 40px;
 }
 th {
-  font-weight: 600;
+  font-weight:bold;
   text-align: left;
 }
 td,
